<resources>
    <string name="app_name">Weather Wizard</string>
    <string name="kma">KoreaMA</string>
    <string name="accu_weather" translatable="false">AccuWeather</string>
    <string name="owm" translatable="false">OpenWeatherMap</string>
    <string name="met">Meteorologisk institutt</string>
    <string name="pm10_str">PM10</string>
    <string name="pm25_str">PM2.5</string>
    <string name="pm10" translatable="false">pm10</string>
    <string name="pm25" translatable="false">pm2.5</string>
    <string name="o3_str">O3</string>
    <string name="no2_str">NO2</string>
    <string name="so2_str">SO2</string>
    <string name="co_str">CO</string>
    <string name="pm10_description">Fine dust with a diameter of less than 10 μm penetrates deep into the lungs, causing respiratory diseases.</string>
    <string name="pm25_description">Very fine dust with a diameter of 2.5 μm or less.</string>
    <string name="o3_description">Concentration in the atmosphere can affect the respiratory and eye and lead to decreased lung function.</string>
    <string name="no2_description">Effects on the respiratory system.</string>
    <string name="so2_description">Effects on the respiratory system.</string>
    <string name="co_description">It can cause headaches and dizziness.</string>
    <string name="current_conditions">Current</string>
    <string name="hourly_forecast">Hourly</string>
    <string name="daily_forecast">Daily</string>
    <string name="air_quality">AirQuality</string>
    <string name="sun_set_rise">Sun Rise/Set</string>
    <string name="settings">settings</string>
    <string name="pref_summary_value_units">temperature : ℃, ℉ / wind speed : m/s, km/h etc.</string>
    <string name="pref_title_value_units">Value unit</string>
    <string name="pref_summary_app_theme">black, white</string>
    <string name="pref_title_app_theme">App Theme</string>
    <string name="pref_title_unit_temp">Temperature</string>
    <string name="pref_title_unit_visibility">Visibility</string>
    <string name="pref_title_unit_wind">Wind Speed</string>
    <string name="pref_title_unit_clock">12/24 clock</string>
    <string name="pref_title_accu_weather" translatable="false">AccuWeather</string>
    <string name="pref_summary_accu_weather">It will be applied later.</string>
    <string name="pref_summary_open_weather_map">The company is headquartered in London, UK, and handles weather information for most of the world.</string>
    <string name="pref_title_open_weather_map" translatable="false">OpenWeatherMap</string>
    <string name="pref_summary_met">The Meteorological Institute is a state agency subordinate to the Ministry of Norway Climate and
        Environment.</string>
    <string name="pref_summary_kma_top_priority">If the requested weather data is in the Republic of Korea, data from the Korea Meteorological Administration is displayed by default.</string>
    <string name="pref_title_kma_top_priority">The Korea MA is set as a top priority</string>
    <string name="pref_summary_use_current_location">Display the current location\'s weather via GPS</string>
    <string name="pref_title_use_current_location">Use your current location</string>
    <string name="pref_summary_weather_data_sources">OpenWeatherMap, Kma~</string>
    <string name="pref_title_weather_data_sources">Weather provider</string>
    <string name="pref_title_forecast_view_type">type of forecast data list</string>
    <string name="black">Black</string>
    <string name="white">White</string>
    <string name="wind_direction_N">N</string>
    <string name="wind_direction_NNE">NNE</string>
    <string name="wind_direction_NE">NE</string>
    <string name="wind_direction_ENE">ENE</string>
    <string name="wind_direction_E">E</string>
    <string name="wind_direction_ESE">ESE</string>
    <string name="wind_direction_SE">SE</string>
    <string name="wind_direction_SSE">SSE</string>
    <string name="wind_direction_S">S</string>
    <string name="wind_direction_SSW">SSW</string>
    <string name="wind_direction_SW">SW</string>
    <string name="wind_direction_WSW">WSW</string>
    <string name="wind_direction_W">W</string>
    <string name="wind_direction_WNW">WNW</string>
    <string name="wind_direction_NW">NW</string>
    <string name="wind_direction_NNW">NNW</string>
    <string name="accu_weather_pty_rain">rain</string>
    <string name="accu_weather_pty_snow">snow</string>
    <string name="accu_weather_pty_ice">ice</string>
    <string name="accu_weather_pty_not">no precipitation</string>
    <string name="accu_weather_pty_mixed">mixed</string>
    <string name="accu_weather_icon_1_sunny">sunny</string>
    <string name="accu_weather_icon_2_mostly_sunny">mostly sunny</string>
    <string name="accu_weather_icon_3_partly_sunny">partly sunny</string>
    <string name="accu_weather_icon_4_intermittent_clouds">intermittent clouds</string>
    <string name="accu_weather_icon_6_mostly_cloudy">mostly cloudy</string>
    <string name="accu_weather_icon_7_cloudy">cloudy</string>
    <string name="accu_weather_icon_8_overcast">overcast</string>
    <string name="accu_weather_icon_13_mostly_cloudy_and_showers">mostly cloudy and showers</string>
    <string name="accu_weather_icon_14_partly_sunny_and_showers">partly sunny and showers</string>
    <string name="accu_weather_icon_15_thunderstorms">thunderstorms</string>
    <string name="accu_weather_icon_16_mostly_cloudy_and_thunderstorms">mostly cloudy and thunderstorms</string>
    <string name="accu_weather_icon_17_partly_sunny_and_thunderstorms">partly cloudy and thunderstorms</string>
    <string name="accu_weather_icon_18_rain">rain</string>
    <string name="accu_weather_icon_19_flurries">flurries</string>
    <string name="accu_weather_icon_20_mostly_cloudy_and_flurries">mostly sunny and flurries</string>
    <string name="accu_weather_icon_21_partly_sunny_and_flurries">partly sunny and flurries</string>
    <string name="accu_weather_icon_22_snow">snow</string>
    <string name="accu_weather_icon_23_mostly_cloudy_and_snow">mostly cloudy and snow</string>
    <string name="accu_weather_icon_24_ice">ice</string>
    <string name="accu_weather_icon_25_sleet">sleet</string>
    <string name="accu_weather_icon_26_freezing_rain">freezing rain</string>
    <string name="accu_weather_icon_29_rain_and_snow">rain and snow</string>
    <string name="accu_weather_icon_30_hot">hot</string>
    <string name="accu_weather_icon_31_cold">cold</string>
    <string name="accu_weather_icon_32_wind">wind</string>
    <string name="accu_weather_icon_33_clear">clear</string>
    <string name="accu_weather_icon_34_mostly_clear">mostly clear</string>
    <string name="accu_weather_icon_35_partly_cloudy">partly cloudy</string>
    <string name="accu_weather_icon_36_intermittent_clouds">intermittent clouds</string>
    <string name="accu_weather_icon_37_hazy_moonlight">hazy moonlight</string>
    <string name="accu_weather_icon_38_mostly_cloudy">mostly cloudy</string>
    <string name="accu_weather_icon_39_partly_cloudy_and_showers">partly cloudy and showers</string>
    <string name="accu_weather_icon_40_mostly_cloudy_and_showers">mostly cloudy and showers</string>
    <string name="accu_weather_icon_41_partly_cloudy_and_thunderstorms">partly cloudy and thunderstorms</string>
    <string name="accu_weather_icon_42_mostly_cloudy_and_thunderstorms">mostly cloudy and thunderstorms</string>
    <string name="accu_weather_icon_43_mostly_cloudy_and_flurries">mostly cloudy and flurries</string>
    <string name="accu_weather_icon_44_mostly_cloudy_and_snow">mostly cloudy and snow</string>
    <string name="owm_icon_200_thunderstorm_with_light_rain">thunderstorm with light rain</string>
    <string name="owm_icon_201_thunderstorm_with_rain">thunderstorm with rain</string>
    <string name="owm_icon_202_thunderstorm_with_heavy_rain">thunderstorm with heavy rain</string>
    <string name="owm_icon_210_light_thunderstorm">light thunderstorm</string>
    <string name="owm_icon_211_thunderstorm">thunderstorm</string>
    <string name="owm_icon_212_heavy_thunderstorm">heavy thunderstorm</string>
    <string name="owm_icon_221_ragged_thunderstorm">ragged thunderstorm</string>
    <string name="owm_icon_230_thunderstorm_with_light_drizzle">thunderstorm with light drizzle</string>
    <string name="owm_icon_231_thunderstorm_with_drizzle">thunderstorm with drizzle</string>
    <string name="owm_icon_232_thunderstorm_with_heavy_drizzle">thunderstorm with heavy drizzle</string>
    <string name="owm_icon_300_light_intensity_drizzle">light intensity drizzle</string>
    <string name="owm_icon_301_drizzle">drizzle</string>
    <string name="owm_icon_302_heavy_intensity_drizzle">heavy intensity drizzle</string>
    <string name="owm_icon_310_light_intensity_drizzle_rain">light intensity drizzle rain</string>
    <string name="owm_icon_311_drizzle_rain">drizzle rain</string>
    <string name="owm_icon_312_heavy_intensity_drizzle_rain">heavy intensity drizzle rain</string>
    <string name="owm_icon_313_shower_rain_and_drizzle">shower rain and drizzle</string>
    <string name="owm_icon_314_heavy_shower_rain_and_drizzle">heavy shower rain and drizzle</string>
    <string name="owm_icon_321_shower_drizzle">shower drizzle</string>
    <string name="owm_icon_500_light_rain">light rain</string>
    <string name="owm_icon_501_moderate_rain">moderate rain</string>
    <string name="owm_icon_502_heavy_intensity_rain">heavy intensity rain</string>
    <string name="owm_icon_503_very_heavy_rain">very heavy rain</string>
    <string name="owm_icon_504_extreme_rain">extreme rain</string>
    <string name="owm_icon_511_freezing_rain">freezing rain</string>
    <string name="owm_icon_520_light_intensity_shower_rain">light intensity shower rain</string>
    <string name="owm_icon_521_shower_rain">shower rain</string>
    <string name="owm_icon_522_heavy_intensity_shower_rain">heavy intensity shower rain</string>
    <string name="owm_icon_531_ragged_shower_rain">ragged shower rain</string>
    <string name="owm_icon_600_light_snow">light snow</string>
    <string name="owm_icon_601_snow">snow</string>
    <string name="owm_icon_602_heavy_snow">heavy snow</string>
    <string name="owm_icon_611_sleet">sleet</string>
    <string name="owm_icon_612_light_shower_sleet">light shower sleet</string>
    <string name="owm_icon_613_shower_sleet">shower sleet</string>
    <string name="owm_icon_615_light_rain_and_snow">light rain and snow</string>
    <string name="owm_icon_616_rain_and_snow">rain and snow</string>
    <string name="weather">weather</string>
    <string name="temperature">temperature</string>
    <string name="probability_of_precipitation">probability of precipitation</string>
    <string name="precipitation_volume">precipitation volume</string>
    <string name="current_location">Current location</string>
    <string name="favorite">favorite</string>
    <string name="location">location</string>
    <string name="selected_location">Selected location</string>
    <string name="auto_refresh_interval">refresh interval</string>
    <string name="change_address">change address</string>
    <string name="use_always_notification">enable ongoing notification</string>
    <string name="alarmClock">notification time</string>
    <string name="notificationAndAlarm">notification</string>
    <string name="repeatAlarm">ring again</string>
    <string name="fiveMinutes">5 minutes</string>
    <string name="tenMinutes">10 minutes</string>
    <string name="fifteenMinutes">15 minutes</string>
    <string name="thirtyMinutes">30 minutes</string>
    <string name="interval">interval</string>
    <string name="repeat">repeat</string>
    <string name="endlessRepeat">keep repeating</string>
    <string name="oneCount">1</string>
    <string name="twoCount">2</string>
    <string name="threeCount">3</string>
    <string name="fiveCount">5</string>
</resources>