<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">


    <LinearLayout
        android:id="@+id/widget_settings_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/adViewBottom"
        android:layout_below="@id/toolbar"
        android:orientation="vertical"
        android:paddingHorizontal="16dp">

        <FrameLayout
            android:id="@+id/preview_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_blue_600"
            android:minHeight="40dp"
            android:paddingHorizontal="18dp"
            android:paddingVertical="12dp" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:overScrollMode="never"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/notificationSwitch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/use_always_notification" />

                <LinearLayout
                    android:id="@+id/settingsLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/WidgetConfigureLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/location" />

                    <RadioGroup
                        android:id="@+id/location_radio_group"
                        style="@style/WidgetConfigureConfig"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/current_location_radio"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/current_location" />

                        <RadioButton
                            android:id="@+id/selected_location_radio"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/selected_location" />

                    </RadioGroup>

                    <Button
                        android:id="@+id/change_address_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:text="@string/change_address"
                        android:visibility="gone" />

                    <TextView
                        style="@style/WidgetConfigureLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/pref_title_weather_data_sources" />

                    <RadioGroup
                        android:id="@+id/weather_data_source_radio_group"
                        style="@style/WidgetConfigureConfig"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/accu_weather_radio"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/accu_weather" />

                        <RadioButton
                            android:id="@+id/owm_radio"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/owm" />

                    </RadioGroup>

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/kma_top_priority_switch"
                        style="@style/WidgetConfigureLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/pref_title_kma_top_priority" />

                    <TextView
                        style="@style/WidgetConfigureLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/auto_refresh_interval" />

                    <Spinner
                        android:id="@+id/auto_refresh_interval_spinner"
                        style="@style/WidgetConfigureConfig"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </LinearLayout>

</layout>