<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:orientation="vertical"
        >

        <LinearLayout
            style="@style/WeatherDataInfoLayout"
            android:visibility="gone"
            >

            <TextView
                style="@style/WeatherDataInfo"
                android:layout_marginRight="12dp"
                android:text="@string/current_conditions"
                />

            <TextView
                android:id="@+id/currentConditionsUpdatedTime"
                style="@style/WeatherDataInfo"
                android:text="currentConditionsUpdatedTime"
                />
        </LinearLayout>

        <LinearLayout
            style="@style/WeatherDataInfoLayout"
            android:visibility="gone"
            >

            <TextView
                style="@style/WeatherDataInfo"
                android:layout_marginRight="12dp"
                android:text="@string/hourly_forecast"
                />

            <TextView
                android:id="@+id/hourlyForecastUpdatedTime"
                style="@style/WeatherDataInfo"
                android:text="hourlyForecastUpdatedTime"
                />
        </LinearLayout>

        <LinearLayout
            style="@style/WeatherDataInfoLayout"
            android:visibility="gone"
            >

            <TextView
                style="@style/WeatherDataInfo"
                android:layout_marginRight="12dp"
                android:text="@string/daily_forecast"
                />

            <TextView
                android:id="@+id/dailyForecastUpdatedTime"
                style="@style/WeatherDataInfo"
                android:text="dailyForecastUpdatedTime"
                />
        </LinearLayout>

        <LinearLayout
            style="@style/WeatherDataInfoLayout"
            android:layout_marginBottom="16dp"
            android:visibility="gone"
            >

            <TextView
                style="@style/WeatherDataInfo"
                android:layout_marginRight="12dp"
                android:text="@string/air_quality"
                />

            <TextView
                android:id="@+id/airQualityUpdatedTime"
                style="@style/WeatherDataInfo"
                android:text="airQualityUpdatedTime"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            >

            <TextView
                style="@style/text_shadow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:shadowColor="@color/black"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="18sp"
                />


        </LinearLayout>
    </LinearLayout>
</layout>